
nobase_include_HEADERS = \
opx/ds_common_types.h         opx/std_file_utils.h         opx/std_socket_service.h \
opx/std_assert.h              opx/std_int_mapping_utils.h  opx/std_socket_tools.h \
opx/std_bit_masks.h           opx/std_ip_utils.h           opx/std_struct_utils.h \
opx/std_bit_ops.h             opx/std_llist.h              opx/std_system.h \
opx/std_cmd_redir.h           opx/std_mac_utils.h          opx/std_thread_pool.h \
opx/std_condition_variable.h  opx/std_mergesort.h          opx/std_thread_tools.h \
opx/std_config_file.h         opx/std_mutex_lock.h         opx/std_time_tools.h  \
opx/std_config_node.h         opx/std_radical.h            opx/std_tlv.h  \
opx/std_directory.h           opx/std_radix.h              opx/std_tlv_internal.h \
opx/std_envvar.h              opx/std_rbtree.h             opx/std_type_defs.h  \
opx/std_error_codes.h         opx/std_rw_lock.h            opx/std_user_perm.h \
opx/std_error_ids.h           opx/std_select_tools.h       opx/std_utils.h \
opx/std_event_service.h       opx/std_shlib.h              opx/std_xml_parser.h

